cmake_minimum_required(VERSION 3.18)
project(wxModbus)
set(CMAKE_CXX_COMPILER C:/TDM-GCC-64/bin/g++.exe)
#set(SRCS src/main.cpp src/*.cpp src/*.c)
#set(PROJECT_FILES ${SRCS})
include_directories(inc/ ${wxWidgets_INCLUDE_DIRS})
add_definitions(-Wall -g -O0)
file(GLOB_RECURSE SRCS src/*.cpp src/*.c)
add_executable(wxModbus ${SRCS})

find_package(wxWidgets REQUIRED)
if(wxWidgets_FOUND)
	include(${wxWidgets_USE_FILE})
	target_link_libraries(wxModbus ${wxWidgets_LIBRARIES})
endif()
